# onionoo-fastapi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  worker.py  wrangler.toml
app/: __init__.py  main.py  settings.py
app/models/: bandwidth.py  clients.py  details.py  envelope.py  history.py  misc.py  summary.py  uptime.py  weights.py
app/routers/: bandwidth.py  clients.py  details.py  params.py  proxy.py  summary.py  uptime.py  weights.py
app/services/: onionoo_client.py
tests/: test_limit_offset.py
